# video-mixer-pro

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  build-all.bat  build-all.sh  generate-icons-simple.py  index.html  install.bat  install.sh  package-lock.json  package.json  run.bat  run.sh  tailwind.config.js
.github/workflows/: build-windows.yml
scripts/: build.bat  build.js  build.sh
src/: App.tsx  index.css  types.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  main.rs  storage.rs  video_processor.rs
src/components/: ConfigList.tsx  ConfigModal.tsx  DeleteConfirmModal.tsx  GenerateModal.tsx  Notification.tsx  TaskList.tsx
