[package]
name = "video-mixer-pro"
version = "1.0.0"
description = "视频随机裁剪合成工具"
authors = ["VideoMixer Pro Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
walkdir = "2.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
